--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -8,6 +8,7 @@ h4.secondary-title {
 .home {
   header {
     height: 100vh;
+    max-height: calc(100vw + 7rem);
     padding: $navbar-height 0 $content-min-padding;
     @media (max-width: $sm-screen) {
       padding: $navbar-height 0 $content-sm-min-padding;
@@ -20,6 +21,10 @@ h4.secondary-title {
 
   .manifesto {
     padding: 4rem 0 4rem;
+
+    @media (max-width: 450px) {
+      padding-top: 0;
+    }
   }
 
   h1.secondary-title {
